--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="heart"></div>
   
   <audio controls>
-      <source src="namora_comigo.mp3" type="audio/mp3">
+      <source src="./assets/media/namora_comigo.mp3" type="audio/mp3">
   </audio>
 
 
