--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="heart"></div>
   
-  <audio controls>
+  <audio controls loop>
       <source src="./assets/media/namora_comigo.mp3" type="audio/mp3">
   </audio>
 
